// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`serverless.event 1`] = `
Object {
  "event": Object {
    "test": "event",
  },
  "ok": true,
}
`;

exports[`serverless.router 1`] = `
Object {
  "ok": true,
}
`;

exports[`serverless.router 2`] = `
Object {
  "event": Object {
    "test": "event2",
  },
  "ok": true,
}
`;
